# IITTest

./: .gitignore  readme.md
MyExamples/: CMakeLists.txt  Notes.txt
MyExamples/include/IITCommunicationExample/: MapElement.h  MapElementPubSubTypes.h  helpers.h
MyExamples/src/HelloWorldMyExample/: HelloWorld.cxx  HelloWorldPublisher.cpp
MyExamples/src/IITCommunicationExample/: MapElement.cxx  MapElement.h  MapElement.idl  MapElementPubSubTypes.cxx  MapElementPublisher.cpp  MapElementSubscriber.cpp
